# proposal-manager

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: ci-test-lints.yaml  deploy-gh-pages.yaml  release-artifacts-on-tag.yaml
frontend/: .prettierignore  codegen-contract.sh  eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/.storybook/: preview.tsx
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts  tanstack.ts
frontend/src/__generated__/: ProposalManager.client.ts  ProposalManager.message-composer.ts  ProposalManager.types.ts
frontend/src/components/: AppIcon.tsx  ConnectWalletButton.tsx  CopyableAddress.tsx  CreateProposalCard.tsx  Fireworks.tsx  Main.tsx  ManageProposal.tsx  Navbar.tsx  ProposalManagerStatus.tsx  RespondProposal.tsx
frontend/src/context/: LoveAppContext.tsx
frontend/src/hooks/: useAllNativeTokenBalances.tsx  useCalculateGasFee.tsx  useCancelProposalMutation.tsx  useCreateProposalMutation.tsx  useProposals.tsx  useRespondProposalMutation.tsx
frontend/src/lib/: utils.ts
frontend/src/routes/: __root.tsx  proposal-manager.lazy.tsx  proposal-manager.love.💖.lazy.tsx
frontend/src/utils/: getAppConfig.tsx
schema/: proposal.json  proposal_manager.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_proposal.json  response_to_proposals.json  response_to_status.json
scripts/: README.md  build_release.sh  build_schemas.sh  get_artifacts_versions.sh
scripts/deployment/: deploy.sh  wallet_importer.sh
src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs
src/proposal/: state.rs
tests/multitest/: mod.rs  suite.rs  test_proposal.rs
(+5 files in other folders)
