[package]
name = "proposal_manager"
authors                 = ["allthatjazzleo"]
description             = "The Proposal Manager is a contract that allows to manage proposals in a single contract."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """
if [ $(uname -m) = 'arm64' ] || [ $(uname -m) = 'aarch64' ]; then docker run --rm -v "$(pwd)":/code \
        --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
        --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
        --platform linux/arm64 \
        cosmwasm/optimizer-arm64:0.16.0; \
elif [ $(uname -m) = 'x86_64' ]; then docker run --rm -v "$(pwd)":/code \
        --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
        --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
        --platform linux/amd64 \
        cosmwasm/optimizer:0.16.0; fi
"""

[dependencies]
cosmwasm-schema = "2"
cosmwasm-std = { version = "2" }
cw-migrate-error-derive = "0.1"
cw-storage-plus = { version = "2", features = ["iterator", "macro"]}
cw-utils = "2"
cw2 = "2"
cw-ownable = "2"
schemars = "0.8"
semver = "1.0"
serde = "1.0"
thiserror = "1.0"

[dev-dependencies]
cw-multi-test = { version = "2", features = ["cosmwasm_2_0"] }
bech32 = { version = "0.11.0" }
rand = { version = "0.8.5" }
anyhow = { version = "1.0" }
